Simplify test environment creation and add option to run tests against local chatbot-rag-app

--- a/example-apps/chatbot-rag-app/test/tracetest/docker-compose.test.yml
+++ b/example-apps/chatbot-rag-app/test/tracetest/docker-compose.test.yml
@@ -21,7 +21,7 @@ services:
         environment:
             TRACETEST_DEV: ${TRACETEST_DEV}
         extra_hosts:
-            - host.docker.internal:host-gateway
+            - localhost:host-gateway
         healthcheck:
             test:
                 - CMD
@@ -36,6 +36,11 @@ services:
             - mode: ingress
               target: 11633
               published: 11633
+              protocol: tcp
+            # Exposing the port for the tracetest otlp receiver that won't overlap with otel-collector.
+            - mode: ingress
+              target: 4317
+              published: 11634
               protocol: tcp
         volumes:
             - type: bind
