--- a/example-apps/chatbot-rag-app/docker-compose.yml
+++ b/example-apps/chatbot-rag-app/docker-compose.yml
@@ -37,18 +37,22 @@ services:
   recreate-requirements:
     image: python:3.13-slim
     volumes:
-      - .:/app
-    working_dir: /app
+      - .:/src
+    working_dir: /build
     profiles:
       - util  # don't start this as a service
-    command: >  # use `uv` as `pip compile` hangs due to large requirements
+    command: >
       bash -c "
-        rm -f requirements.txt &&
         pip install uv &&
-        uv venv /tmp/.venv &&
-        source /tmp/.venv/bin/activate &&
-        uv pip install elastic-opentelemetry &&
+        uv venv &&
+        cp /src/requirements.in . &&
+        # First, install the application requirements into the venv
         uv pip compile requirements.in -o requirements.txt &&
         uv pip sync requirements.txt &&
-        edot-bootstrap >> requirements.txt
+        # Next, detect and add instrumentation requirements
+        uv pip install elastic-opentelemetry &&
+        uv run edot-bootstrap >> requirements.in &&
+        # Finally, recreate a new pinned requirements.txt
+        uv pip compile requirements.in -o requirements.txt
+        cp requirements.txt /src/requirements.txt
       "
