--- a/example-apps/chatbot-rag-app/requirements.txt
+++ b/example-apps/chatbot-rag-app/requirements.txt
@@ -61,6 +61,8 @@ docstring-parser==0.16
     # via google-cloud-aiplatform
 elastic-opentelemetry==1.2.0
     # via -r requirements.in
+elastic-opentelemetry-instrumentation-openai==1.1.1
+    # via -r requirements.in
 elastic-transport==8.17.1
     # via elasticsearch
 elasticsearch==8.18.1
@@ -264,12 +266,35 @@ openai==1.82.0
 opentelemetry-api==1.33.1
     # via
     #   elastic-opentelemetry
+    #   elastic-opentelemetry-instrumentation-openai
     #   langtrace-python-sdk
     #   opentelemetry-exporter-otlp-proto-grpc
     #   opentelemetry-exporter-otlp-proto-http
     #   opentelemetry-instrumentation
+    #   opentelemetry-instrumentation-aiohttp-client
+    #   opentelemetry-instrumentation-aiohttp-server
+    #   opentelemetry-instrumentation-asyncio
+    #   opentelemetry-instrumentation-boto3sqs
+    #   opentelemetry-instrumentation-botocore
+    #   opentelemetry-instrumentation-click
+    #   opentelemetry-instrumentation-dbapi
+    #   opentelemetry-instrumentation-elasticsearch
+    #   opentelemetry-instrumentation-flask
+    #   opentelemetry-instrumentation-grpc
+    #   opentelemetry-instrumentation-httpx
+    #   opentelemetry-instrumentation-jinja2
+    #   opentelemetry-instrumentation-logging
+    #   opentelemetry-instrumentation-requests
     #   opentelemetry-instrumentation-sqlalchemy
+    #   opentelemetry-instrumentation-sqlite3
     #   opentelemetry-instrumentation-system-metrics
+    #   opentelemetry-instrumentation-threading
+    #   opentelemetry-instrumentation-tortoiseorm
+    #   opentelemetry-instrumentation-urllib
+    #   opentelemetry-instrumentation-urllib3
+    #   opentelemetry-instrumentation-vertexai
+    #   opentelemetry-instrumentation-wsgi
+    #   opentelemetry-propagator-aws-xray
     #   opentelemetry-resourcedetector-gcp
     #   opentelemetry-sdk
     #   opentelemetry-semantic-conventions
@@ -290,13 +315,87 @@ opentelemetry-exporter-otlp-proto-http==1.33.1
 opentelemetry-instrumentation==0.54b1
     # via
     #   elastic-opentelemetry
+    #   elastic-opentelemetry-instrumentation-openai
     #   langtrace-python-sdk
+    #   opentelemetry-instrumentation-aiohttp-client
+    #   opentelemetry-instrumentation-aiohttp-server
+    #   opentelemetry-instrumentation-asyncio
+    #   opentelemetry-instrumentation-boto3sqs
+    #   opentelemetry-instrumentation-botocore
+    #   opentelemetry-instrumentation-click
+    #   opentelemetry-instrumentation-dbapi
+    #   opentelemetry-instrumentation-elasticsearch
+    #   opentelemetry-instrumentation-flask
+    #   opentelemetry-instrumentation-grpc
+    #   opentelemetry-instrumentation-httpx
+    #   opentelemetry-instrumentation-jinja2
+    #   opentelemetry-instrumentation-logging
+    #   opentelemetry-instrumentation-requests
     #   opentelemetry-instrumentation-sqlalchemy
+    #   opentelemetry-instrumentation-sqlite3
     #   opentelemetry-instrumentation-system-metrics
+    #   opentelemetry-instrumentation-threading
+    #   opentelemetry-instrumentation-tortoiseorm
+    #   opentelemetry-instrumentation-urllib
+    #   opentelemetry-instrumentation-urllib3
+    #   opentelemetry-instrumentation-vertexai
+    #   opentelemetry-instrumentation-wsgi
+opentelemetry-instrumentation-aiohttp-client==0.54b1
+    # via -r requirements.in
+opentelemetry-instrumentation-aiohttp-server==0.54b1
+    # via -r requirements.in
+opentelemetry-instrumentation-asyncio==0.54b1
+    # via -r requirements.in
+opentelemetry-instrumentation-boto3sqs==0.54b1
+    # via -r requirements.in
+opentelemetry-instrumentation-botocore==0.54b1
+    # via -r requirements.in
+opentelemetry-instrumentation-click==0.54b1
+    # via -r requirements.in
+opentelemetry-instrumentation-dbapi==0.54b1
+    # via
+    #   -r requirements.in
+    #   opentelemetry-instrumentation-sqlite3
+opentelemetry-instrumentation-elasticsearch==0.54b1
+    # via -r requirements.in
+opentelemetry-instrumentation-flask==0.54b1
+    # via -r requirements.in
+opentelemetry-instrumentation-grpc==0.54b1
+    # via -r requirements.in
+opentelemetry-instrumentation-httpx==0.54b1
+    # via -r requirements.in
+opentelemetry-instrumentation-jinja2==0.54b1
+    # via -r requirements.in
+opentelemetry-instrumentation-logging==0.54b1
+    # via -r requirements.in
+opentelemetry-instrumentation-requests==0.54b1
+    # via -r requirements.in
 opentelemetry-instrumentation-sqlalchemy==0.54b1
-    # via langtrace-python-sdk
+    # via
+    #   -r requirements.in
+    #   langtrace-python-sdk
+opentelemetry-instrumentation-sqlite3==0.54b1
+    # via -r requirements.in
 opentelemetry-instrumentation-system-metrics==0.54b1
-    # via elastic-opentelemetry
+    # via
+    #   -r requirements.in
+    #   elastic-opentelemetry
+opentelemetry-instrumentation-threading==0.54b1
+    # via -r requirements.in
+opentelemetry-instrumentation-tortoiseorm==0.54b1
+    # via -r requirements.in
+opentelemetry-instrumentation-urllib==0.54b1
+    # via -r requirements.in
+opentelemetry-instrumentation-urllib3==0.54b1
+    # via -r requirements.in
+opentelemetry-instrumentation-vertexai==2.0b0
+    # via -r requirements.in
+opentelemetry-instrumentation-wsgi==0.54b1
+    # via
+    #   -r requirements.in
+    #   opentelemetry-instrumentation-flask
+opentelemetry-propagator-aws-xray==1.0.2
+    # via opentelemetry-instrumentation-botocore
 opentelemetry-proto==1.33.1
     # via
     #   opentelemetry-exporter-otlp-proto-common
@@ -320,9 +419,37 @@ opentelemetry-sdk-extension-aws==2.1.0
 opentelemetry-semantic-conventions==0.54b1
     # via
     #   elastic-opentelemetry
+    #   elastic-opentelemetry-instrumentation-openai
     #   opentelemetry-instrumentation
+    #   opentelemetry-instrumentation-aiohttp-client
+    #   opentelemetry-instrumentation-aiohttp-server
+    #   opentelemetry-instrumentation-asyncio
+    #   opentelemetry-instrumentation-boto3sqs
+    #   opentelemetry-instrumentation-botocore
+    #   opentelemetry-instrumentation-click
+    #   opentelemetry-instrumentation-dbapi
+    #   opentelemetry-instrumentation-elasticsearch
+    #   opentelemetry-instrumentation-flask
+    #   opentelemetry-instrumentation-grpc
+    #   opentelemetry-instrumentation-httpx
+    #   opentelemetry-instrumentation-requests
     #   opentelemetry-instrumentation-sqlalchemy
+    #   opentelemetry-instrumentation-tortoiseorm
+    #   opentelemetry-instrumentation-urllib
+    #   opentelemetry-instrumentation-urllib3
+    #   opentelemetry-instrumentation-vertexai
+    #   opentelemetry-instrumentation-wsgi
     #   opentelemetry-sdk
+opentelemetry-util-http==0.54b1
+    # via
+    #   opentelemetry-instrumentation-aiohttp-client
+    #   opentelemetry-instrumentation-aiohttp-server
+    #   opentelemetry-instrumentation-flask
+    #   opentelemetry-instrumentation-httpx
+    #   opentelemetry-instrumentation-requests
+    #   opentelemetry-instrumentation-urllib
+    #   opentelemetry-instrumentation-urllib3
+    #   opentelemetry-instrumentation-wsgi
 orjson==3.10.18
     # via langsmith
 packaging==24.2
@@ -335,6 +462,7 @@ packaging==24.2
     #   langsmith
     #   marshmallow
     #   opentelemetry-instrumentation
+    #   opentelemetry-instrumentation-flask
     #   opentelemetry-instrumentation-sqlalchemy
     #   transformers
 propcache==0.3.1
@@ -523,35 +651,24 @@ werkzeug==3.1.3
 wrapt==1.17.2
     # via
     #   deprecated
+    #   elastic-opentelemetry-instrumentation-openai
     #   opentelemetry-instrumentation
+    #   opentelemetry-instrumentation-aiohttp-client
+    #   opentelemetry-instrumentation-aiohttp-server
+    #   opentelemetry-instrumentation-asyncio
+    #   opentelemetry-instrumentation-boto3sqs
+    #   opentelemetry-instrumentation-click
+    #   opentelemetry-instrumentation-dbapi
+    #   opentelemetry-instrumentation-elasticsearch
+    #   opentelemetry-instrumentation-grpc
+    #   opentelemetry-instrumentation-httpx
+    #   opentelemetry-instrumentation-jinja2
     #   opentelemetry-instrumentation-sqlalchemy
+    #   opentelemetry-instrumentation-threading
+    #   opentelemetry-instrumentation-urllib3
 yarl==1.20.0
     # via aiohttp
 zipp==3.22.0
     # via importlib-metadata
 zstandard==0.23.0
     # via langsmith
-opentelemetry-instrumentation-asyncio==0.54b1
-opentelemetry-instrumentation-dbapi==0.54b1
-opentelemetry-instrumentation-logging==0.54b1
-opentelemetry-instrumentation-sqlite3==0.54b1
-opentelemetry-instrumentation-threading==0.54b1
-opentelemetry-instrumentation-urllib==0.54b1
-opentelemetry-instrumentation-wsgi==0.54b1
-opentelemetry-instrumentation-vertexai>=2.0b0
-opentelemetry-instrumentation-aiohttp-client==0.54b1
-opentelemetry-instrumentation-aiohttp-server==0.54b1
-opentelemetry-instrumentation-boto3sqs==0.54b1
-opentelemetry-instrumentation-botocore==0.54b1
-opentelemetry-instrumentation-click==0.54b1
-opentelemetry-instrumentation-elasticsearch==0.54b1
-opentelemetry-instrumentation-flask==0.54b1
-opentelemetry-instrumentation-grpc==0.54b1
-opentelemetry-instrumentation-httpx==0.54b1
-opentelemetry-instrumentation-jinja2==0.54b1
-opentelemetry-instrumentation-requests==0.54b1
-opentelemetry-instrumentation-sqlalchemy==0.54b1
-opentelemetry-instrumentation-system-metrics==0.54b1
-opentelemetry-instrumentation-tortoiseorm==0.54b1
-opentelemetry-instrumentation-urllib3==0.54b1
-elastic-opentelemetry-instrumentation-openai
