--- a/supporting-blog-content/add-ai-generated-summaries/es-proxy/package.json
+++ b/supporting-blog-content/add-ai-generated-summaries/es-proxy/package.json
@@ -2,6 +2,7 @@
   "name": "es-proxy",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.4",
+    "@elastic/search-ui-elasticsearch-connector": "^1.24.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
