--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ repos:
     # generic [...]_PASSWORD=[...] pattern
     - --additional-pattern
     - '_PASSWORD=[0-9a-zA-Z_-]{10}'
-- repo: https://github.com/ambv/black
-  rev: 24.1.1  # Use latest tag on GitHub
+- repo: https://github.com/psf/black
+  rev: 25.12.0  # Use latest tag on GitHub
   hooks:
   - id: black-jupyter
